--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,49 @@
 }
 
 #profile-pic{
-    height: 90%;
-    width: 90%;
+    height: 85%;
+    width: 85%;
     border-radius: 50%;
 }
 #side-name{
-    padding-left: 10%;
+    padding-left: 8%;
+}
+.side-hr{
+    border: 0;
+        border-top-color: initial;
+        border-top-style: initial;
+        border-top-width: 0px;
+        border-right-color: initial;
+        border-right-style: initial;
+        border-right-width: 0px;
+        border-bottom-color: initial;
+        border-bottom-style: initial;
+        border-bottom-width: 0px;
+        border-left-color: initial;
+        border-left-style: initial;
+        border-left-width: 0px;
+        border-image-source: initial;
+        border-image-slice: initial;
+        border-image-width: initial;
+        border-image-outset: initial;
+        border-image-repeat: initial;
+    height: 1px;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+.side-bar a{
+    color: rgb(70, 70, 109);
+    text-decoration: none;
+    font-weight: 500;
+}
+.side-bar a:hover{
+    color: rgb(23, 22, 24);
+    text-decoration: none;
+    font-weight: 500;
+}
+.side-icon{
+    max-width: 2vw;
+    max-height: 2vw;
 }
 
 .content{
