--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,48 @@
 .navbar{
-    border-bottom: 2px solid rgba(228, 225, 225, 0.2);
+    /*border-bottom: 2px solid rgba(228, 225, 225, 0.2);*/
+    background-color: ;
+}
+
+.openbtn {
+  font-size: 23px;
+  cursor: pointer;
+  background-color: rgb(0,0,0,0);
+  color: white;
+  padding-right: 25px;
+  padding-top: 10px;
+  border: none;
+}
+.navbar-brand{
+    font-size: 25px;
+    color: whitesmoke;
+    margin-right: 3rem;
 }
 
 .side-bar{
-  height: 100%;
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  right: 75%;
   background-color: rgb(33,37,41,1);
-  overflow-x: scroll;
-  padding-top: 20px;
+  /*overflow-x: scroll;*/
+  /*padding-top: 20px;*/
   font-size: 1.05vw;
   color: rgb(255, 255, 255);
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
+}
+.side-bar .closebtn {
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+.side-bar .closebtn:hover {
+    color: white;
 }
 
 #profile-pic{
@@ -59,7 +89,7 @@
     font-weight: 500;
 }
 .side-bar button{
-    width:19vw;
+    width:80%;
     font-size:1vw;
 }
 
@@ -75,9 +105,17 @@
     max-height: 2.5vw;
 }
 
+#main {
+  background-image: url("../assets/mainbg.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  transition: margin-left .5s;
+  /*padding: 16px;*/
+}
+
 .content{
     position: absolute;
-    left: 25%;
+    /*left: 25%;*/
     padding-left: 2%;
     padding-top: 2%;
 }
@@ -91,4 +129,13 @@ font-size: 2.5vw;
 
 .content h1{
     font-family: 'Bungee Inline', cursive;
+}
+
+#pskill{
+    display: inline-flex;
+}
+
+@media screen and (max-height: 450px) {
+  .sidebar {padding-top: 15px;}
+  .sidebar a {font-size: 18px;}
 }
