--- a/css/style.css
+++ b/css/style.css
@@ -139,3 +139,17 @@ font-size: 2.5vw;
   .sidebar {padding-top: 15px;}
   .sidebar a {font-size: 18px;}
 }
+
+@media screen and (max-width: 700px) {
+    .side-icon-dark{
+        background-color: rgb(255, 255, 255);
+        border-radius: 100%;
+        max-width: 7vw;
+        max-height: 7vw;
+        margin-right: 2em;
+    }
+    .side-icon{
+        max-width: 7vw;
+        max-height:75vw;
+    }
+}
