--- a/css/style.css
+++ b/css/style.css
@@ -46,8 +46,8 @@
 }
 
 #profile-pic{
-    height: 50%;
-    width: 50%;
+    height: 65%;
+    width: 65%;
     border-radius: 50%;
     border: 3.5px solid rgba(255, 255, 255, 0.219);
 }
@@ -120,6 +120,13 @@
     padding-top: 2%;
 }
 
+#programmer{
+    width: 7%;
+    height: 7%;
+    float: right;
+    margin-right: 5%;
+}
+
 #home-content{
     /* font-family: 'Aladin', cursive;
 font-family: 'Bungee Inline', cursive; */
@@ -133,6 +140,15 @@ font-size: 2.5vw;
 
 #pskill{
     display: inline-flex;
+}
+.skill-card{
+    margin-right: 2%;
+}
+
+#marq-skill{
+    display: inline-block;
+    margin-left: 20%;
+    width: 80%;
 }
 
 @media screen and (max-height: 450px) {
@@ -151,5 +167,14 @@ font-size: 2.5vw;
     .side-icon{
         max-width: 7vw;
         max-height:75vw;
+    }
+    #programmer{
+        width: 10%;
+        height: 10%;
+    }
+    #marq-skill{
+        display: inline-block;
+        margin-left: 0%;
+        width: 100%;
     }
 }
