--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .navbar{
     /*border-bottom: 2px solid rgba(228, 225, 225, 0.2);*/
-    background-color: ;
+    background-color: rgb(0, 0, 0, 0.9);
 }
 
 .openbtn {
@@ -53,30 +57,9 @@
 }
 #side-name{
     /* padding-left: 5%; */
+    padding-top: 1em;
     
 }
-/* .side-hr{
-    border: 0;
-        border-top-color: initial;
-        border-top-style: initial;
-        border-top-width: 0px;
-        border-right-color: initial;
-        border-right-style: initial;
-        border-right-width: 0px;
-        border-bottom-color: initial;
-        border-bottom-style: initial;
-        border-bottom-width: 0px;
-        border-left-color: initial;
-        border-left-style: initial;
-        border-left-width: 0px;
-        border-image-source: initial;
-        border-image-slice: initial;
-        border-image-width: initial;
-        border-image-outset: initial;
-        border-image-repeat: initial;
-    height: 1px;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
-} */
 
 .side-bar a{
     color: rgb(70, 70, 109);
@@ -106,18 +89,17 @@
 }
 
 #main {
-  background-image: url("../assets/mainbg.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
+  /*background-image: url("../assets/mainbg.jpg");*/
+  /*background-size: cover;*/
+  /*background-repeat: no-repeat;*/
   transition: margin-left .5s;
   /*padding: 16px;*/
 }
 
 .content{
-    position: absolute;
+    /*position: absolute;*/
     /*left: 25%;*/
     padding-left: 2%;
-    padding-top: 2%;
 }
 
 #programmer{
@@ -128,10 +110,11 @@
 }
 
 #home-content{
-    /* font-family: 'Aladin', cursive;
-font-family: 'Bungee Inline', cursive; */
-font-family: 'Gugi', cursive;  
-font-size: 2.5vw; 
+    padding-top: 4rem;
+        /* font-family: 'Aladin', cursive;
+    font-family: 'Bungee Inline', cursive; */
+    font-family: 'Gugi', cursive;  
+    font-size: 2.5vw; 
 }
 
 .content h1{
@@ -139,16 +122,24 @@ font-size: 2.5vw;
 }
 
 #pskill{
-    display: inline-flex;
+      display: inline-flex;
+  animation: marquee 10s linear infinite;
 }
 .skill-card{
     margin-right: 2%;
 }
 
-#marq-skill{
-    display: inline-block;
-    margin-left: 20%;
-    width: 80%;
+/*#marq-skill {
+  display: inline-block;
+  animation: marquee 10s linear infinite;
+}*/
+@keyframes marquee {
+  from {
+    transform: translateX(-100%);
+  }
+  to {
+    transform: translateX(100%);
+  }
 }
 
 @media screen and (max-height: 450px) {
@@ -172,9 +163,5 @@ font-size: 2.5vw;
         width: 10%;
         height: 10%;
     }
-    #marq-skill{
-        display: inline-block;
-        margin-left: 0%;
-        width: 100%;
-    }
+    
 }
