--- a/css/style.css
+++ b/css/style.css
@@ -8,18 +8,24 @@ html {
 }
 
 .openbtn {
-  font-size: 23px;
+  font-size: 21px;
   cursor: pointer;
   background-color: rgb(0,0,0,0);
   color: white;
-  padding: 0.5em;
-  border: none;
+  padding: 0.25em;
 }
 #sideOpenDiv{
-    background-color: rgb(0, 0, 0, 0.9);
+    margin-left: 0.2rem;
+    text-align: center;
+    background-color: rgb(0, 0, 0, 0.7);
     border-radius: 50%;
-    position: absolute;
+    height: 2.5em;
+    width: 2.5em;
+    bottom: 0.2%;
+    position: fixed;
 }
+#sideOpenDiv:hover{background-color: rgb(0, 0, 0, 0.9);}
+
 .navbar-brand{
     font-size: 25px;
     color: whitesmoke;
@@ -93,16 +99,11 @@ html {
 }
 
 #main {
-  /*background-image: url("../assets/mainbg.jpg");*/
-  /*background-size: cover;*/
-  /*background-repeat: no-repeat;*/
   transition: margin-left .5s;
-  /*padding: 16px;*/
 }
 
 .content{
-    /*position: absolute;*/
-    /*left: 25%;*/
+    position: relative;
     padding-left: 2%;
 }
 
