project sec added

--- a/css/style.css
+++ b/css/style.css
@@ -54,9 +54,7 @@ html {
   right: 25px;
   font-size: 36px;
   margin-left: 50px;
-}
-.side-bar .closebtn:hover {
-    color: white;
+  color: white;
 }
 
 #profile-pic{
@@ -118,6 +116,7 @@ html {
     padding-top: 4rem;
     font-family: 'Gugi', cursive;  
     font-size: 2.5vw; 
+    display: inline-block;
 }
 
 .content h1{
@@ -125,25 +124,14 @@ html {
 }
 
 /*#pskill{
-    display: inline-flex;
-    animation: marquee 10s linear infinite;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
 }*/
 .skill-card{
     margin-right: 2%;
 }
 
-/*#marq-skill {
-  display: inline-block;
-  animation: marquee 10s linear infinite;
-}*/
-/*@keyframes marquee {
-  from {
-    transform: translateX(-100%);
-  }
-  to {
-    transform: translateX(100%);
-  }
-}*/
+
 
 @media screen and (max-height: 450px) {
   .sidebar {padding-top: 15px;}
@@ -167,4 +155,144 @@ html {
         height: 10%;
     }
     
+}
+
+
+
+
+
+
+.glow-on-hover {
+    width: 220px;
+    height: 50px;
+    border: none;
+    outline: none;
+    color: #fff;
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+}
+
+.glow-on-hover:before {
+    content: '';
+    background: linear-gradient(45deg, #ff0000, #ff7300, #fffb00, #48ff00, #00ffd5, #002bff, #7a00ff, #ff00c8, #ff0000);
+    position: absolute;
+    top: -2px;
+    left:-2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 20s linear infinite;
+    opacity: 0;
+    transition: opacity .3s ease-in-out;
+    border-radius: 10px;
+}
+
+.glow-on-hover:active {
+    color: #000
+}
+
+.glow-on-hover:active:after {
+    background: transparent;
+}
+
+.glow-on-hover:before {
+    opacity: 1;
+}
+
+.glow-on-hover:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #111;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
+
+@keyframes glowing {
+    0% { background-position: 0 0; }
+    50% { background-position: 400% 0; }
+    100% { background-position: 0 0; }
+}
+
+
+
+
+.timeline{
+  width:100%;
+/*  background-color:#072736;*/
+  color:#fff;
+  padding:30px 20px;
+  /*box-shadow:0px 0px 10px rgba(0,0,0,.5);*/
+}
+.timeline h1{
+    color: black;
+}
+.timeline ul{
+  list-style-type:none;
+  border-left:2px solid rgb(54 54 54);
+  padding:10px 5px;
+}
+.timeline ul li{
+  padding:20px 20px;
+  position:relative;
+  cursor:pointer;
+  transition:.5s;
+}
+.timeline ul li span{
+  display:inline-block;
+  background-color:#1685b8;
+  border-radius:25px;
+  padding:2px 5px;
+  font-size:15px;
+  text-align:center;
+}
+.timeline ul li .content h3{
+  color:#34ace0;
+  font-size:17px;
+  padding-top:5px;
+}
+.timeline ul li .content p{
+  padding:5px 0px 15px 0px;
+  font-size:15px;
+  color: black;
+}
+.timeline ul li:hover p{
+    color: white;
+}
+.timeline ul li:before{
+  position:absolute;
+  content:'';
+  width:20px;
+  height:20px;
+  background-color:#34ace0;
+  border-radius:50%;
+  left:-16px;
+  top:28px;
+  transition:.5s;
+}
+.timeline ul li:hover{
+  background-color:rgb(0, 0, 0, 0.8);
+}
+.timeline ul li:hover:before{
+  background-color:#0F0;
+  box-shadow:0px 0px 10px 2px #0F0;
+}
+@media (max-width:300px){
+  .timeline{
+    width:100%;
+    padding:30px 5px 30px 10px;
+  }
+  .timeline ul li .content h3{
+    color:#34ace0;
+    font-size:15px;
+  }
+
 }
