--- a/css/style.css
+++ b/css/style.css
@@ -107,8 +107,8 @@ html {
 
 #programmer{
     width: 25vw;
-    min-height: 97px;
-    min-width: 80px;
+    min-height: 105px;
+    min-width: 95px;
     height: 7%;
     float: right;
     margin-right: 5%;
@@ -124,11 +124,13 @@ html {
     font-family: 'Gugi', cursive;  
     font-size: 2.5vw; 
     display: inline-block;
+    overflow: auto;
 }
 #pcontact{
     max-width: 50vw;
 }
 #contact-content{
+    overflow: auto;
     margin-bottom: 20px;
 }
 
@@ -142,6 +144,32 @@ html {
 }*/
 .skill-card{
     margin-right: 2%;
+}
+.chip {
+  color: white;
+  display: inline-block;
+  padding: 0 25px;
+  height: 50px;
+  font-size: 16px;
+  line-height: 50px;
+  font-family: 'Gugi';
+  border-radius: 25px;
+  background-color: rgb(0, 0, 0, 0.8);
+  margin: 7px;
+  padding-bottom: 3px;
+  text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
+}
+.chip:hover{
+    text-shadow: 0 0 20px #fff, 0 0 30px #f9c31b, 0 0 40px #f9c31b, 0 0 50px #f9c31b, 0 0 60px #f9c31b, 0 0 70px #f9c31b, 0 0 80px #f9c31b;;
+}
+.chip img {
+  background-color: white;
+  float: left;
+  margin: 0 10px 0 -25px;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: 1.5px solid limegreen;
 }
 
 
