--- a/css/mail.css
+++ b/css/mail.css
@@ -10,6 +10,15 @@
   cursor: pointer;
 }
 
+@media screen and (max-width: 700px) {
+  .letter-image{
+    float: none;
+  -webkit-transform: translate(0%, -5%);
+  -moz-transform: translate(0%, -5%);
+  transform: translate(0%, -5%);
+  }
+}
+
 .animated-mail {
   position: absolute;
   height: 150px;
