--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ html {
 
 #home-content{
     padding-top: 4rem;
-    font-family: 'Gugi', cursive;  
+    font-family: 'Gugi';  
     font-size: 2.5vw; 
     display: inline-block;
     overflow: auto;
@@ -130,6 +130,17 @@ html {
 #pcontact{
     max-width: 50vw;
 }
+#pcontact a{
+    color: #937c7c;
+    font-weight: 700;
+    font-family: monospace;
+    margin-bottom: 2px;
+    text-decoration: none;
+}
+#pcontact a:hover{
+    border-bottom: 2px solid #4286eb;
+}
+
 #contact-content{
     overflow: auto;
     margin-bottom: 20px;
