--- a/css/mail.css
+++ b/css/mail.css
@@ -16,6 +16,7 @@
   -webkit-transform: translate(0%, -5%);
   -moz-transform: translate(0%, -5%);
   transform: translate(0%, -5%);
+  height: 225px;
   }
 }
 
